# plotter

./: .gitignore  1.eps  Device.hs  Driver.hs  Main.hs  RasterDraw.hs  RasterDriver.hs  RealDevice.hs  SimulatedDevice.hs  ToHpgl.hs  bld  convert_ps_to_hpgl  driver  plotter.cabal  plotter.hs  raster_draw  raster_driver  real_device  recover_remainder.rb  run  simulated_device  to_hpgl  todo
Arduino-Makefile/examples/Blink/: Makefile
Plotter/: Command.hs  CommandReader.hs  CommandWriter.hs  Curve.hs  Device.hs  Driver.hs  HpglCommand.hs  HpglParser.hs  HpglToLines.hs  Main.hs  Path.hs  PngParser.hs  RasterDriver.hs  RealDevice.hs  Shared.hs  SimulatedDevice.hs  Traversal.hs
arduino/: Makefile  plotter.ino
hpgl/: Free_Dragon_Tattoo_01.eps  PLhistory.hpgl  birds.hpgl  chick.hpgl  code.hpgl  convert.rb  dragon.hpgl  europe.hpgl  factory.hpgl  frac.hpgl  fulloutput.hpgl  girl_with_flowers.hpgl  hello.hpgl  hello2.hpgl  horizontal.hpgl  horse_logo.eps  horses.hpgl  kai_i_madzia.hpgl  little_my.hpgl  littlematchgirl.hpgl  machine.hpgl  moomins2.hpgl  moomins3.hpgl  moomins4.hpgl  multi_square.hpgl  nexus.hpgl  output  owl1.hpgl  penny_farthing.hpgl  pioneer_plague.hpgl  planetary.hpgl  planetary2.hpgl  planetary3.hpgl  recycle.eps  rover.hpgl  shelby.hpgl  shutl.hpgl  shutl_shirt.hpgl  sierpinski.hpgl  square.hpgl  (+8 more)
