name:                plotter

version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            vertical plotter using Arduino

-- A longer description of the package.
-- description:

license:             MIT

-- license-file:        LICENSE

author:              Kai

maintainer:          kajboj@gmail.com

-- A copyright notice.
-- copyright:

category:            Graphics

build-type:          Simple

cabal-version:       >=1.8

executable driver
  main-is:       Driver.hs

  other-modules: Plotter.Command
               , Plotter.HpglCommand
               , Plotter.HpglParser
               , Plotter.Shared
               , Plotter.CommandWriter
               , Plotter.Driver

  build-depends: base        == 4.5.*
               , parsec      == 3.1.*

executable simulated_device
  main-is:       SimulatedDevice.hs
  other-modules: Plotter.Command
               , Plotter.CommandReader
               , Plotter.Shared
               , Plotter.SimulatedDevice

  build-depends: base        == 4.5.*
               , gloss       == 1.7.*
               , io-storage  == 0.3.*
