name:                plotter

version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            vertical plotter using Arduino

-- A longer description of the package.
-- description:

license:             MIT

-- license-file:        LICENSE

author:              Kai

maintainer:          kajboj@gmail.com

-- A copyright notice.
-- copyright:

category:            Graphics

build-type:          Simple

cabal-version:       >=1.8

executable driver
  main-is:       Driver.hs

  other-modules: Plotter.Command
               , Plotter.HpglCommand
               , Plotter.HpglParser
               , Plotter.Shared
               , Plotter.CommandWriter
               , Plotter.Driver

  build-depends: base        == 4.5.*
               , parsec      == 3.1.*

executable simulated_device
  main-is:       SimulatedDevice.hs
  other-modules: Plotter.Command
               , Plotter.CommandReader
               , Plotter.Shared
               , Plotter.SimulatedDevice

  build-depends: base        == 4.5.*
               , gloss       == 1.7.*
               , io-storage  == 0.3.*

executable real_device
  main-is:       RealDevice.hs
  build-depends: base        == 4.5.*
               , serial      == 0.1.*
               , unix        == 2.5.*

executable raster_driver
  main-is:       RasterDriver.hs

  other-modules: Plotter.HpglCommand
               , Plotter.Command 
               , Plotter.Traversal
               , Plotter.PngParser
               , Plotter.Shared  
               , Plotter.CommandWriter
               , Plotter.RasterDriver
               , Plotter.Driver  

  build-depends: base        == 4.5.*
               , mtl         == 2.1.*
               , random      == 1.1.*
               , containers  == 0.4.*
               , vector      == 0.10.*
               , JuicyPixels == 3.1.*

--- executable plotter
---   main-is:       Driver.hs
---   -- other-modules:
---   build-depends: base        == 4.5.*
---                , gloss       == 1.7.*
---                , random      == 1.1.*
---                , mtl         == 2.1.*
---                , io-storage  == 0.3.*
---                , unix        == 2.5.*
---                , serial      == 0.1.*
---                , vector      == 0.10.*
---                , containers  == 0.4.*
---                , JuicyPixels == 3.1.*
---                , parsec      == 3.1.*
