name:                plotter

version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            vertical plotter using Arduino

-- A longer description of the package.
-- description:

license:             MIT

-- license-file:        LICENSE

author:              Kai

maintainer:          kajboj@gmail.com

-- A copyright notice.
-- copyright:

category:            Graphics

build-type:          Simple

cabal-version:       >=1.8

executable driver
  main-is:       Driver.hs

  other-modules: Plotter.Command
               , Plotter.HpglCommand
               , Plotter.HpglParser
               , Plotter.Shared
               , Plotter.CommandWriter
               , Plotter.Driver

  build-depends: base
               , parsec

executable simulated_device
  main-is:       SimulatedDevice.hs
  other-modules: Plotter.Command
               , Plotter.CommandReader
               , Plotter.Shared
               , Plotter.SimulatedDevice

  build-depends: base
               , gloss
               , io-storage

executable real_device
  main-is:       RealDevice.hs
  build-depends: base
               , serial
               , unix

executable raster_driver
  main-is:       RasterDriver.hs

  other-modules: Plotter.HpglCommand
               , Plotter.Command 
               , Plotter.Traversal
               , Plotter.PngParser
               , Plotter.Shared  
               , Plotter.CommandWriter
               , Plotter.RasterDriver
               , Plotter.Driver  

  build-depends: base
               , mtl
               , random
               , containers
               , vector
               , JuicyPixels

  ghc-options:   "-with-rtsopts=-K256M" 

executable raster_draw
  main-is:       RasterDraw.hs

  other-modules: Plotter.HpglCommand
               , Plotter.HpglToLines
               , Plotter.Traversal
               , Plotter.PngParser
               , Plotter.RasterDriver

  build-depends: base
               , mtl
               , random
               , containers
               , vector
               , JuicyPixels
               , gloss

  ghc-options:   "-with-rtsopts=-K256M"

executable to_hpgl
  main-is:       ToHpgl.hs

  -- other-modules: Plotter.HpglCommand

  build-depends: base
